// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Business #Auth #suthenticate should reject if it receives an unknown validation message from the server 1`] = `
Array [
  Message {
    "field": "password",
    "message": "It is not possible to log in right now.",
    "type": "Error",
    "value": "",
  },
]
`;

exports[`#Business #Auth #suthenticate should reject if it receives no token 1`] = `
Array [
  Message {
    "field": "password",
    "message": "It is not possible to log in right now.",
    "type": "Error",
    "value": "",
  },
]
`;

exports[`#Business #Auth #suthenticate should reject if it recieves a failed credentials validation message from the server 1`] = `
Array [
  Message {
    "field": "password",
    "message": "Username and password did not match.",
    "type": "Error",
    "value": "",
  },
]
`;

exports[`#Business #Auth #suthenticate should reject if no password is provided. 1`] = `
Array [
  Message {
    "field": "password",
    "message": "required",
    "type": "Error",
    "value": undefined,
  },
]
`;

exports[`#Business #Auth #suthenticate should reject if no username is provided. 1`] = `
Array [
  Message {
    "field": "username",
    "message": "required",
    "type": "Error",
    "value": undefined,
  },
  Message {
    "field": "password",
    "message": "required",
    "type": "Error",
    "value": undefined,
  },
]
`;
